@@ -9,7 +9,6 @@ AC_PROG_LIBTOOL
 
 AC_PROG_CC
 AC_PROG_CPP
-AC_PROG_OBJC
 AM_PROG_CC_C_O
 
 AM_PATH_GLIB_2_0
